--- a/Lab-4_2023-24/main.ipynb
+++ b/Lab-4_2023-24/main.ipynb
@@ -520,35 +520,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "b6f8bfa0-05ac-4ff3-93b5-af5947662ec0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>\n",
-       ".dl-inline {width: auto; margin:0; padding: 0}\n",
-       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
-       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
-       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>(Intercept)</dt><dd>1.53263588514987</dd><dt>x</dt><dd>22.4122064297574</dd></dl>\n"
+       "<strong>(Intercept):</strong> 2.00571115999316"
       ],
       "text/latex": [
-       "\\begin{description*}\n",
-       "\\item[(Intercept)] 1.53263588514987\n",
-       "\\item[x] 22.4122064297574\n",
-       "\\end{description*}\n"
+       "\\textbf{(Intercept):} 2.00571115999316"
       ],
       "text/markdown": [
-       "(Intercept)\n",
-       ":   1.53263588514987x\n",
-       ":   22.4122064297574\n",
-       "\n"
+       "**(Intercept):** 2.00571115999316"
       ],
       "text/plain": [
-       "(Intercept)           x \n",
-       "   1.532636   22.412206 "
+       "(Intercept) \n",
+       "   2.005711 "
       ]
      },
      "metadata": {},
@@ -556,7 +545,7 @@
     }
    ],
    "source": [
-    "exp(reg$coefficients)"
+    "exp(reg$coefficients[1])"
    ]
   },
   {
