Отметил приянтые лабы

--- a/Lab-7_2023-24/main.ipynb
+++ b/Lab-7_2023-24/main.ipynb
@@ -634,7 +634,7 @@
    "id": "3994f1a1-82bd-433e-bb2c-47775c4db3c8",
    "metadata": {},
    "source": [
-    "Самое часто встречающееся значение"
+    " Не самое частое а смаое дорогое среднее"
    ]
   },
   {
@@ -793,7 +793,7 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = data$rent ~ (data$s + data$district_1 + data$district_2 + \n",
+       "lm(formula = data$rent ~ (data$s + data$district_1 + data$district_3 + \n",
        "    data$district_4))\n",
        "\n",
        "Residuals:\n",
@@ -802,11 +802,11 @@
        "\n",
        "Coefficients:\n",
        "                Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept)      5059.89     517.08   9.785  < 2e-16 ***\n",
+       "(Intercept)      6336.75     511.48  12.389  < 2e-16 ***\n",
        "data$s            194.98      10.46  18.650  < 2e-16 ***\n",
-       "data$district_1 -1230.43     440.90  -2.791  0.00608 ** \n",
-       "data$district_2  1276.86     466.82   2.735  0.00714 ** \n",
-       "data$district_4  -803.35     476.91  -1.685  0.09458 .  \n",
+       "data$district_1 -2507.29     454.70  -5.514 1.92e-07 ***\n",
+       "data$district_3 -1276.86     466.82  -2.735  0.00714 ** \n",
+       "data$district_4 -2080.21     489.39  -4.251 4.13e-05 ***\n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
@@ -820,7 +820,7 @@
     }
    ],
    "source": [
-    "NDummyReg <- lm(data$rent ~ (data$s + data$district_1 + data$district_2 + data$district_4))\n",
+    "NDummyReg <- lm(data$rent ~ (data$s + data$district_1 + data$district_3 + data$district_4))\n",
     "summary(NDummyReg)"
    ]
   },
