--- a/Semester2/Lab-1/main.ipynb
+++ b/Semester2/Lab-1/main.ipynb
@@ -687,8 +687,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "64c80093-f1b7-44af-b094-c927fee505f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tShapiro-Wilk normality test\n",
+       "\n",
+       "data:  model$residuals\n",
+       "W = 0.7906, p-value = 5.361e-07\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model <- lm(Rent ~ M2, data = data)\n",
+    "shapiro.test(model$residuals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "86cd0d53-11b8-4535-927c-0cb4222993bb",
    "metadata": {},
    "outputs": [
     {
@@ -707,13 +732,12 @@
     }
    ],
    "source": [
-    "model <- lm(Rent ~ M2, data = data)\n",
     "gqtest(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "268f5bf2-011d-4fca-bf1e-4bcec16ba131",
    "metadata": {},
    "outputs": [
@@ -746,8 +770,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "87eb61f3-d51d-456f-8514-3a3fb844f3fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# y = data$Price / data$M2\n",
+    "# x = 1/data$M2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3ba51000-50fd-4c1d-893d-b91780884931",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = (Rent/M2) ~ (1/M2), data = data)\n",
+       "\n",
+       "Residuals:\n",
+       "   Min     1Q Median     3Q    Max \n",
+       "-533.2 -215.8 -147.5  -12.0 5773.1 \n",
+       "\n",
+       "Coefficients:\n",
+       "            Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)    560.3      119.4   4.693  2.2e-05 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 844.2 on 49 degrees of freedom\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model2 <- lm( (Rent / M2) ~ (1/M2) ,data = data)\n",
+    "summary(model2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b7503491-ae8c-441a-a34d-f950bbeae527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tShapiro-Wilk normality test\n",
+       "\n",
+       "data:  model2$residuals\n",
+       "W = 0.24703, p-value = 1.401e-14\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "shapiro.test(model2$residuals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3bd720d8-2cba-4dbd-bbe4-7db4daab1ec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tGoldfeld-Quandt test\n",
+       "\n",
+       "data:  model2\n",
+       "GQ = 80.091, df1 = 24, df2 = 24, p-value < 2.2e-16\n",
+       "alternative hypothesis: variance increases from segment 1 to 2\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "gqtest(model2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "853c7e6e-fc8c-4cb3-a638-5888eb2d89c5",
    "metadata": {},
    "outputs": [],
    "source": []
