--- a/Semester2/Lab-2/main.ipynb
+++ b/Semester2/Lab-2/main.ipynb
@@ -24,78 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "424e0e67-e542-481d-93a2-a5dccb232e32",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 × 6</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>Y</th><th scope=col>X1</th><th scope=col>X2</th><th scope=col>X3</th><th scope=col>X4</th><th scope=col>X5</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td> 9.7</td><td>1.59</td><td>0.26</td><td>2.05</td><td>0.32</td><td>0.14</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td> 8.4</td><td>0.34</td><td>0.28</td><td>0.46</td><td>0.59</td><td>0.66</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>19.0</td><td>2.53</td><td>0.31</td><td>2.46</td><td>0.30</td><td>0.31</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td> 9.9</td><td>4.63</td><td>0.40</td><td>6.44</td><td>0.43</td><td>0.59</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td> 9.6</td><td>2.16</td><td>0.26</td><td>2.16</td><td>0.39</td><td>0.16</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td> 8.6</td><td>2.16</td><td>0.30</td><td>2.69</td><td>0.32</td><td>0.17</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 6\n",
-       "\\begin{tabular}{r|llllll}\n",
-       "  & Y & X1 & X2 & X3 & X4 & X5\\\\\n",
-       "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t1 &  9.7 & 1.59 & 0.26 & 2.05 & 0.32 & 0.14\\\\\n",
-       "\t2 &  8.4 & 0.34 & 0.28 & 0.46 & 0.59 & 0.66\\\\\n",
-       "\t3 & 19.0 & 2.53 & 0.31 & 2.46 & 0.30 & 0.31\\\\\n",
-       "\t4 &  9.9 & 4.63 & 0.40 & 6.44 & 0.43 & 0.59\\\\\n",
-       "\t5 &  9.6 & 2.16 & 0.26 & 2.16 & 0.39 & 0.16\\\\\n",
-       "\t6 &  8.6 & 2.16 & 0.30 & 2.69 & 0.32 & 0.17\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 6\n",
-       "\n",
-       "| <!--/--> | Y &lt;dbl&gt; | X1 &lt;dbl&gt; | X2 &lt;dbl&gt; | X3 &lt;dbl&gt; | X4 &lt;dbl&gt; | X5 &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| 1 |  9.7 | 1.59 | 0.26 | 2.05 | 0.32 | 0.14 |\n",
-       "| 2 |  8.4 | 0.34 | 0.28 | 0.46 | 0.59 | 0.66 |\n",
-       "| 3 | 19.0 | 2.53 | 0.31 | 2.46 | 0.30 | 0.31 |\n",
-       "| 4 |  9.9 | 4.63 | 0.40 | 6.44 | 0.43 | 0.59 |\n",
-       "| 5 |  9.6 | 2.16 | 0.26 | 2.16 | 0.39 | 0.16 |\n",
-       "| 6 |  8.6 | 2.16 | 0.30 | 2.69 | 0.32 | 0.17 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Y    X1   X2   X3   X4   X5  \n",
-       "1  9.7 1.59 0.26 2.05 0.32 0.14\n",
-       "2  8.4 0.34 0.28 0.46 0.59 0.66\n",
-       "3 19.0 2.53 0.31 2.46 0.30 0.31\n",
-       "4  9.9 4.63 0.40 6.44 0.43 0.59\n",
-       "5  9.6 2.16 0.26 2.16 0.39 0.16\n",
-       "6  8.6 2.16 0.30 2.69 0.32 0.17"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "head(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5b16f714-c142-4986-925f-10a2aa831bc4",
    "metadata": {},
    "outputs": [],
@@ -105,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0cee6550-b0ec-429f-a9f7-04ff526929dd",
    "metadata": {},
    "outputs": [
@@ -146,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8a342a23-1301-4842-8404-b0190a90ba73",
    "metadata": {},
    "outputs": [
@@ -231,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "72d96c2b-cfdf-4d4a-bce9-4eddd61c323f",
    "metadata": {},
    "outputs": [
@@ -325,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a4ee7638-ab31-472b-8a77-fa7442a94303",
    "metadata": {},
    "outputs": [
@@ -394,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5ab5e8dc-aa68-42dc-85cd-813a1a8e3ebe",
    "metadata": {},
    "outputs": [
@@ -418,12 +347,13 @@
     }
    ],
    "source": [
-    "det(cor(data, method = c(\"pearson\")))"
+    "det(cor(data, method = c(\"pearson\")))\n",
+    "# Малое значение определитель опять же указанывает на наличие мультиколлениарности"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "de4cb554-8a09-4979-a3b0-919b5bf97091",
    "metadata": {},
    "outputs": [
@@ -500,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e170a444-26ff-437b-9e37-3a2c09b92355",
    "metadata": {},
    "outputs": [
@@ -531,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "70199342-ee99-45f8-8af5-9bfd9b33b7dd",
    "metadata": {},
    "outputs": [
@@ -562,9 +492,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79f7665a-b464-4074-8d00-b831238620b5",
+   "metadata": {},
+   "source": [
+    "# Есть подозрение что, все нужно делать в наборе данных с машинами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0483fc1d-fd81-4400-8b36-c70aa5a8cf54",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'data2' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'data2' not found\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "data <- read.csv(file = \"../Data/Cars.csv\", header = TRUE, dec = \",\")[,-1] # Удалил навзание\n",
+    "data2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0483fc1d-fd81-4400-8b36-c70aa5a8cf54",
+   "id": "de184d1c-a84d-439c-b86b-6bb0c85e22d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model <- lm(PRICE ~ ., data=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f64813-6d1e-4fbb-81c0-5a5b0ddf6e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbae53f0-1b4e-44f7-a127-c8d8a021532c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cor(data, method = c(\"pearson\")) # Коэффицент корреляции Пирсона\n",
+    "pairs(data,col = \"blue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1cd6bf3-ce06-4a01-9f7c-1ff502a9cd4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Статистика стьдента\n",
+    "t <- sqrt(cor(data, method = c(\"pearson\")) * (length(data[,1]) - length(data) - 1)) / sqrt(1 - cor(data)^2)\n",
+    "abs(t)\n",
+    "# Квантиль 95\n",
+    "qt(.975, length(data[,1]) - length(data) - 1)\n",
+    "\n",
+    "# H0 отсуствие корреляции. \n",
+    "# abs(t) < квантиль => H0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b79b452e-652c-4691-a46d-2d0b4ec7d67f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solve(cor(data, method = c(\"pearson\"))) # обратная матрица"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7deadb-3cd5-491a-aff7-3cdbb94434a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "det(cor(data, method = c(\"pearson\")))\n",
+    "# Малое значение определитель опять же указанывает на наличие мультиколлениарности"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7adc3de7-3cd2-4bff-a11d-49ff630f5cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AlgComp <- solve(cor(data, method = c(\"pearson\"))) * det(cor(data, method = c(\"pearson\")))\n",
+    "AlgComp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78d352c3-632b-4241-9276-9318c7a6d88b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Множ коэф корреляции\n",
+    "MultiplyCor <- 1 - (det(cor(data)) / AlgComp[7,7] )\n",
+    "MultiplyCor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7af602-62b4-445d-b067-f6b93a4a17c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Детерминация\n",
+    "# 1 - Услованя дисперсия/Дисперсия\n",
+    "\n",
+    "1 - sum(model$residuals**2) / sum((data$PRICE - mean(data$PRICE))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d67d3d5-e0c4-4b85-9cf7-39f53b3bfb2e",
    "metadata": {},
    "outputs": [],
    "source": []
