Добавил проверку через step

--- a/Semester2/Lab-3/main.ipynb
+++ b/Semester2/Lab-3/main.ipynb
@@ -963,8 +963,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "f47c6b49-12c0-404f-a0a7-3f271c01ccb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start:  AIC=376.41\n",
+      "PRICE ~ -1\n",
+      "\n",
+      "         Df  Sum of Sq        RSS    AIC\n",
+      "+ WT      1 2.1413e+10 3.2387e+08 302.70\n",
+      "+ POW     1 2.1328e+10 4.0870e+08 306.89\n",
+      "+ MAX.SP  1 2.1227e+10 5.1015e+08 310.88\n",
+      "+ LEN     1 2.1202e+10 5.3492e+08 311.73\n",
+      "+ WID     1 2.1116e+10 6.2120e+08 314.42\n",
+      "+ CYL     1 2.1088e+10 6.4839e+08 315.19\n",
+      "<none>                 2.1737e+10 376.41\n",
+      "\n",
+      "Step:  AIC=302.7\n",
+      "PRICE ~ WT - 1\n",
+      "\n",
+      "         Df Sum of Sq       RSS    AIC\n",
+      "+ POW     1  93053269 230814385 298.60\n",
+      "<none>                323867653 302.70\n",
+      "+ CYL     1   7379268 316488385 304.28\n",
+      "+ LEN     1   6574914 317292740 304.33\n",
+      "+ WID     1   5768263 318099390 304.38\n",
+      "+ MAX.SP  1   4435340 319432314 304.45\n",
+      "\n",
+      "Step:  AIC=298.6\n",
+      "PRICE ~ WT + POW - 1\n",
+      "\n",
+      "         Df Sum of Sq       RSS    AIC\n",
+      "<none>                230814385 298.60\n",
+      "+ CYL     1   9630861 221183524 299.83\n",
+      "+ WID     1   1064465 229749919 300.52\n",
+      "+ LEN     1    738112 230076272 300.54\n",
+      "+ MAX.SP  1     25338 230789047 300.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "regModel0 <- lm(PRICE ~ - 1, data = data)\n",
+    "regModelfull <- lm(PRICE ~ ., data = data)\n",
+    "stepForward <- step(regModel0, scope=list(lower=regModel0, upper=regModelfull), direction=\"forward\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5aeafff8-08b8-481d-a8a4-ec7d08161acf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'lm'"
+      ],
+      "text/latex": [
+       "'lm'"
+      ],
+      "text/markdown": [
+       "'lm'"
+      ],
+      "text/plain": [
+       "[1] \"lm\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "class(stepForward) # Он возращает лучшуб линеную модель."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "21ff4c68-e9b7-4293-8c97-11263b543b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = PRICE ~ WT + POW - 1, data = data)\n",
+       "\n",
+       "Residuals:\n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-6961.7 -1818.2   262.7  2143.7  5212.9 \n",
+       "\n",
+       "Coefficients:\n",
+       "    Estimate Std. Error t value Pr(>|t|)   \n",
+       "WT    18.508      5.271   3.512  0.00289 **\n",
+       "POW  167.448     65.930   2.540  0.02185 * \n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 3798 on 16 degrees of freedom\n",
+       "Multiple R-squared:  0.9894,\tAdjusted R-squared:  0.9881 \n",
+       "F-statistic: 745.4 on 2 and 16 DF,  p-value: < 2.2e-16\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(stepForward) # Как и у меня"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5ea917b4-ba62-443d-9c73-9aae28b0e55d",
+   "id": "cbe9209a-d038-42b7-b0c6-f660b834616a",
    "metadata": {},
    "outputs": [],
    "source": []
