--- a/Semester1/Lab-4_2023-24/main.ipynb
+++ b/Semester1/Lab-4_2023-24/main.ipynb
@@ -526,8 +526,7 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-      ]
+      "text/html": []
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1474,7 +1473,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.1"
+   "version": "4.3.3"
   }
  },
  "nbformat": 4,
