--- a/Semester2/Lab-6/main.ipynb
+++ b/Semester2/Lab-6/main.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "48393362-d52d-40bc-83fa-1c98f732f255",
    "metadata": {},
    "outputs": [
@@ -351,57 +351,57 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 × 5</caption>\n",
+       "<caption>A data.frame: 6 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Dt</th><th scope=col>YT_1</th><th scope=col>Ct</th><th scope=col>YT</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>Dt</th><th scope=col>YT_1</th><th scope=col>Ct</th><th scope=col>YT</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>1</td><td> -6.8</td><td>46.7</td><td> 7.4</td><td> 3.1</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>2</td><td> 22.4</td><td> 3.1</td><td>30.4</td><td>22.8</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>3</td><td>-17.3</td><td>22.8</td><td> 1.3</td><td> 7.8</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>4</td><td> 12.0</td><td> 7.8</td><td> 8.7</td><td>21.4</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>5</td><td>  5.9</td><td>21.4</td><td>25.8</td><td>17.8</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>6</td><td> 44.7</td><td>17.8</td><td> 8.6</td><td>37.2</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td> -6.8</td><td>46.7</td><td> 7.4</td><td> 3.1</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td> 22.4</td><td> 3.1</td><td>30.4</td><td>22.8</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>-17.3</td><td>22.8</td><td> 1.3</td><td> 7.8</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td> 12.0</td><td> 7.8</td><td> 8.7</td><td>21.4</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>  5.9</td><td>21.4</td><td>25.8</td><td>17.8</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td> 44.7</td><td>17.8</td><td> 8.6</td><td>37.2</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 6 × 5\n",
-       "\\begin{tabular}{r|lllll}\n",
-       "  & Year & Dt & YT\\_1 & Ct & YT\\\\\n",
-       "  & <int> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "A data.frame: 6 × 4\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & Dt & YT\\_1 & Ct & YT\\\\\n",
+       "  & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t1 & 1 &  -6.8 & 46.7 &  7.4 &  3.1\\\\\n",
-       "\t2 & 2 &  22.4 &  3.1 & 30.4 & 22.8\\\\\n",
-       "\t3 & 3 & -17.3 & 22.8 &  1.3 &  7.8\\\\\n",
-       "\t4 & 4 &  12.0 &  7.8 &  8.7 & 21.4\\\\\n",
-       "\t5 & 5 &   5.9 & 21.4 & 25.8 & 17.8\\\\\n",
-       "\t6 & 6 &  44.7 & 17.8 &  8.6 & 37.2\\\\\n",
+       "\t1 &  -6.8 & 46.7 &  7.4 &  3.1\\\\\n",
+       "\t2 &  22.4 &  3.1 & 30.4 & 22.8\\\\\n",
+       "\t3 & -17.3 & 22.8 &  1.3 &  7.8\\\\\n",
+       "\t4 &  12.0 &  7.8 &  8.7 & 21.4\\\\\n",
+       "\t5 &   5.9 & 21.4 & 25.8 & 17.8\\\\\n",
+       "\t6 &  44.7 & 17.8 &  8.6 & 37.2\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 6 × 5\n",
+       "A data.frame: 6 × 4\n",
        "\n",
-       "| <!--/--> | Year &lt;int&gt; | Dt &lt;dbl&gt; | YT_1 &lt;dbl&gt; | Ct &lt;dbl&gt; | YT &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|\n",
-       "| 1 | 1 |  -6.8 | 46.7 |  7.4 |  3.1 |\n",
-       "| 2 | 2 |  22.4 |  3.1 | 30.4 | 22.8 |\n",
-       "| 3 | 3 | -17.3 | 22.8 |  1.3 |  7.8 |\n",
-       "| 4 | 4 |  12.0 |  7.8 |  8.7 | 21.4 |\n",
-       "| 5 | 5 |   5.9 | 21.4 | 25.8 | 17.8 |\n",
-       "| 6 | 6 |  44.7 | 17.8 |  8.6 | 37.2 |\n",
+       "| <!--/--> | Dt &lt;dbl&gt; | YT_1 &lt;dbl&gt; | Ct &lt;dbl&gt; | YT &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1 |  -6.8 | 46.7 |  7.4 |  3.1 |\n",
+       "| 2 |  22.4 |  3.1 | 30.4 | 22.8 |\n",
+       "| 3 | -17.3 | 22.8 |  1.3 |  7.8 |\n",
+       "| 4 |  12.0 |  7.8 |  8.7 | 21.4 |\n",
+       "| 5 |   5.9 | 21.4 | 25.8 | 17.8 |\n",
+       "| 6 |  44.7 | 17.8 |  8.6 | 37.2 |\n",
        "\n"
       ],
       "text/plain": [
-       "  Year Dt    YT_1 Ct   YT  \n",
-       "1 1     -6.8 46.7  7.4  3.1\n",
-       "2 2     22.4  3.1 30.4 22.8\n",
-       "3 3    -17.3 22.8  1.3  7.8\n",
-       "4 4     12.0  7.8  8.7 21.4\n",
-       "5 5      5.9 21.4 25.8 17.8\n",
-       "6 6     44.7 17.8  8.6 37.2"
+       "  Dt    YT_1 Ct   YT  \n",
+       "1  -6.8 46.7  7.4  3.1\n",
+       "2  22.4  3.1 30.4 22.8\n",
+       "3 -17.3 22.8  1.3  7.8\n",
+       "4  12.0  7.8  8.7 21.4\n",
+       "5   5.9 21.4 25.8 17.8\n",
+       "6  44.7 17.8  8.6 37.2"
       ]
      },
      "metadata": {},
@@ -409,13 +409,23 @@
     }
    ],
    "source": [
-    "data <- read.csv(file = \"../Data/6_2.csv\", sep =\";\", dec= \",\")\n",
+    "data <- read.csv(file = \"../Data/6_2.csv\", sep =\";\", dec= \",\")[,-1]\n",
     "head(data)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b8a5c25-8056-4991-b44e-94ecf4e36cae",
+   "metadata": {},
+   "source": [
+    "$Y_t, C$ - Эндогенные\n",
+    "\n",
+    "$Y_{t-1}, D$ - Экзогенные"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "0a03aba4-411d-495c-baf9-8bd8371c7627",
    "metadata": {},
    "outputs": [
@@ -439,40 +449,10 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = YT ~ Dt + YT_1, data = data)\n",
+       "lm(formula = YT ~ C_plus_D, data = data)\n",
        "\n",
        "Coefficients:\n",
-       "(Intercept)           Dt         YT_1  \n",
-       "     8.2184       0.6688       0.2610  \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "model1 <- lm(Ct~Dt + YT_1, data = data)\n",
-    "model1\n",
-    "\n",
-    "model2 <- lm(YT~Dt + YT_1, data = data)\n",
-    "model2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1b0b2225-4330-4514-9c6e-d61428081a88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Call:\n",
-       "lm(formula = YT ~ CD, data = data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)           CD  \n",
+       "(Intercept)     C_plus_D  \n",
        "     7.6878       0.5117  \n"
       ]
      },
@@ -481,9 +461,26 @@
     }
    ],
    "source": [
-    "CD = model1$fitted.values + data$Dt\n",
-    "lm(YT~CD, data = data)"
+    "# Регрессия Эндогенных Экзогенные\n",
+    "# По приведенной форме индентефицируемого нахожу оценки\n",
+    "model <- lm(Ct~Dt + YT_1, data = data)\n",
+    "Ct_est <- model$fitted.values\n",
+    "model\n",
+    "C_plus_D <- Ct_est + data$Dt\n",
+    "\n",
+    "# Подставляю в сверхидентефицируемое уравнение\n",
+    "YT <- lm(YT ~ C_plus_D, data = data)\n",
+    "\n",
+    "YT"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9658568e-6041-4af7-9ec7-f55b34432d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
